--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "element-ui": "^2.9.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "lib-flexible": "^0.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1"
